[package]
name = "twtscrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["scrape"]
onlytypes = []
scrape = ["url", "scraper", "urlencoding", "reqwest", "tokio", "tracing", "serde_json"]

[dependencies]
serde ={ version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "rkyv"] }
thiserror = "1.0"
ahash = "0.8"
rkyv = { version = "0.7", features = ["validation"] }

[dependencies.url]
version = "2.3"
optional = true

[dependencies.scraper]
version = "0.13"
optional = true

[dependencies.urlencoding]
version = "2.1"
optional = true

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "socks", "cookies", "gzip", "brotli", "rustls-tls", "deflate"]
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.nanorand]
version = "0.7.0"
